Changes
SimpleReporter:
-- Updated with all new changes, including variabilization

ASTMutator, SearchAndReplace:
-- Added support for Let expressions

BlockingCollection:
-- Added a method to unblock getter calls, needed when stopping the search

Candidate:
-- Removed unused method
-- Added a STOP final candidate
-- Fixed mutations counter
-- Added current expression to mutate index (needed for variabilization)

MutantLab:
-- Made singleton
-- Moved code related to commands to run from SimpleReporter to this class
-- Improved code to deal with current candidate (including dealing with the new STOP candidate to signal a stop to the search)
-- Added functionality to provide all marked expressions of the initial code

MutationTask:
-- Added a second check for run status (to avoid generating mutants when the search was stopped)
-- Implemented variabilization check
-- Updated to new mutation generation (related to current index of the candidate)

JER, JES:
-- Fixed an aliasing issue with generated mutations

ContextExpressionExtractor:
-- Updated to fix the issue in JES and JER

DependencyGraph:
-- Made singleton
-- Added method to get all commands in the current module

DependencyScanner:
-- Updated to changes in DependencyGraph

Cheats:
-- Added methods to change the sub and expr fields of ExprLet
-- Added methods to add and remove a Sig to the current module

Mutation:
-- Updated to new marked status in ast nodes

MutationConfiguration:
-- Added variabilization option (true/false) to (enable/disable) variabilization
-- Renamed REPAIR_MAX_MUTATIONS to REPAIR_MAX_DEPTH (to better reflect the option's purpose)

Mutator:
-- Updated mutGenLimitCheck to use Browsable#canBeMutated instead of Browsable#hasMutGenLimit

Ops:
-- Added VAR operator used only in variabilization (this operator is similar to MULTI)

WorkerEngine:
-- Added a printStackTrace in some exceptions (this should be removed in the future)

Browsable:
-- Added fields and methods to reflect the "nodes can be 